# crypto-wedding-sol-cli

./: .env.example  Cargo.toml  README.md
src/: actions.rs  lib.rs  main.rs  network.rs  util.rs
