[package]
name = "crypto_wedding_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "^1.10.29"
solana-program = "^1.10.29"
solana-sdk = "^1.10.29"
crypto-wedding = { path = "../crypto-wedding/programs/crypto-wedding", features = ["no-entrypoint"] }
anchor-client = "0.25.0"
anchor-lang = "0.25.0"
dotenv = "0.15.0"
